--- a/src/main/resources/templates/uspesna_registracija.html
+++ b/src/main/resources/templates/uspesna_registracija.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>Druga kontrolna tačka</title>
     <link rel="stylesheet" href="../static/css/temp_style.css">
