--- a/src/main/resources/templates/dodaj_bioskop.html
+++ b/src/main/resources/templates/dodaj_bioskop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <title>Prikaz svih korisnika</title>
+    <title>Dodaj bioskop</title>
     <link rel="stylesheet" href="../static/css/temp_style.css">
     <meta charset="utf-8"/>
 </head>
@@ -13,18 +13,18 @@
             </div>
             <div class="navbar">
                 <ul class="menu">
-                    <li><a href="temp_index.html">Početna</a></li>
-                    <li><a href="profil.html">Moj profil</a></li>
-                    <li><a href="prijava.html">Prijava</a></li>
-                    <li><a href="registracija.html">Registracija</a></li>
-                    <li><a href="dodaj_bioskop.html">Dodaj bioskop</a></li>
+                    <li><a th:href="${'/'}">Početna</a></li>
+                    <li><a th:href="${'/profil'}">Moj profil</a></li>
+                    <li><a th:href="${'/prijava'}">Prijava</a></li>
+                    <li><a th:href="${'/registracija'}">Registracija</a></li>
+                    <li><a th:href="${'/dodaj_bioskop'}">Dodaj bioskop</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     
-<h1><br>Prikaz svih korisnika<br><br></h1>
+<h1><br>Dodaj bioskop<br><br></h1>
 
 <h2></h2>
 
