--- a/src/main/resources/templates/no_access.html
+++ b/src/main/resources/templates/no_access.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="widht=device-width, initial-scale = 1.0"/>
@@ -8,7 +8,7 @@
     <title>Pristup onemogućen</title>
 </head>
 <body>
-    <h2><br><br>Nemate dozvolu za pristup ovoj stranici. Ukoliko mislite da je došlo do greške, molimo obratite se administratoru.</h2>
+    <h2><br><br>Nemate dozvolu za pristup ovoj stranici. Ukoliko mislite da je došlo do greške, molimo obratite se administratoru. <br><br>Za povratak na početnu stranicu, klinkite <a th:href="${'/'}">ovde</a></h2>
 
 </body>
 </html>
