Druga kontrolna tacka

--- a/src/main/resources/templates/dodaj_bioskop.html
+++ b/src/main/resources/templates/dodaj_bioskop.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>Dodaj bioskop</title>
-    <link rel="stylesheet" href="../static/css/temp_style.css">
+    <link rel="stylesheet" th:href="@{css/temp_style.css}">
     <meta charset="utf-8"/>
 </head>
 <body>
