--- a/src/main/resources/templates/no_access.html
+++ b/src/main/resources/templates/no_access.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="widht=device-width, initial-scale = 1.0"/>
     <title>Novosadski bioskopi</title>
-    <link href="../static/css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{css/temp_style.css}">
     <title>Pristup onemogućen</title>
 </head>
 <body>
