--- a/src/main/resources/templates/svi_korisnici.html
+++ b/src/main/resources/templates/svi_korisnici.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Prikaz svih korisnika</title>
-    <link rel="stylesheet" href="../static/css/temp_style.css">
+    <link rel="stylesheet" th:href="@{css/temp_style.css}">
     <meta charset="utf-8"/>
 </head>
 <body>
@@ -13,11 +13,11 @@
             </div>
             <div class="navbar">
                 <ul class="menu">
-                    <li><a href="temp_index.html">Početna</a></li>
-                    <li><a href="profil.html">Moj profil</a></li>
-                    <li><a href="prijava.html">Prijava</a></li>
-                    <li><a href="registracija.html">Registracija</a></li>
-                    <li><a href="dodaj_bioskop.html">Dodaj bioskop</a></li>
+                    <li><a th:href="${'/'}">Početna</a></li>
+                    <li><a th:href="${'/profil'}">Moj profil</a></li>
+                    <li><a th:href="${'/prijava'}">Prijava</a></li>
+                    <li><a th:href="${'/registracija'}">Registracija</a></li>
+                    <li><a th:href="${'/dodaj_bioskop'}">Dodaj bioskop</a></li>
                 </ul>
             </div>
         </div>
