--- a/src/main/resources/templates/temp_index.html
+++ b/src/main/resources/templates/temp_index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>Druga kontrolna tačka</title>
-    <link rel="stylesheet" href="../static/css/temp_style.css">
+    <link rel="stylesheet" th:href="@{css/temp_style.css}">
     <meta charset="utf-8"/>
 </head>
 <body>
