--- a/src/main/resources/templates/uspesna_registracija.html
+++ b/src/main/resources/templates/uspesna_registracija.html
@@ -2,29 +2,14 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>Druga kontrolna tačka</title>
-    <link rel="stylesheet" href="../static/css/temp_style.css">
+    <link rel="stylesheet" th:href="@{css/temp_style.css}">
     <meta charset="utf-8"/>
 </head>
 <body>
-    <nav>
-        <div class="container">
-            <div class="logo_div">
-                <img src="../static/images/logo_stari.png" alt="">
-            </div>
-            <div class="navbar">
-                <ul class="menu">
-                    <li><a href="temp_index.html">Početna</a></li>
-                    <li><a href="profil.html">Moj profil</a></li>
-                    <li><a href="prijava.html">Prijava</a></li>
-                    <li><a href="registracija.html">Registracija</a></li>
-                    <li><a href="dodaj_bioskop.html">Dodaj bioskop</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    
 
     
-<h1><br>Uspešno ste izvršili registraciju!<br><br></h1>
+<h2><br>Uspešno ste izvršili registraciju!<br><br>Kliknite <a th:href="${'/'}">ovde</a> za povratak na početnu stranicu.</h2>
 
 
 </body>
