--- a/src/main/resources/templates/no_access.html
+++ b/src/main/resources/templates/no_access.html
@@ -2,13 +2,10 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="widht=device-width, initial-scale = 1.0"/>
-    <title>Novosadski bioskopi</title>
-    <link rel="stylesheet" th:href="@{css/temp_style.css}">
-    <title>Pristup onemogućen</title>
+    <title>Greška</title>
 </head>
 <body>
-    <h2><br><br>Nemate dozvolu za pristup ovoj stranici. Ukoliko mislite da je došlo do greške, molimo obratite se administratoru. <br><br>Za povratak na početnu stranicu, klinkite <a th:href="${'/'}">ovde</a></h2>
+<h2><br><br>Nemate dozvolu za pristup ovoj stranici. Ukoliko mislite da je došlo do greške, molimo obratite se administratoru. <br><br>Za povratak na početnu stranicu, klinkite <a th:href="${'/'}">ovde</a></h2>
 
 </body>
 </html>
