--- a/src/main/resources/templates/gledalac_index.html
+++ b/src/main/resources/templates/gledalac_index.html
@@ -15,15 +15,16 @@
                 <ul class="menu">
                     <li><a th:href="${'/'}">Početna</a></li>
                     <li><a th:href="${'/filmovi'}">Filmovi</a></li>
-                    <li><a th:href="${'/prijava'}">Prijava</a></li>
-                    <li><a th:href="${'/registracija'}">Registracija</a></li>
+                    <li><a th:href="${'/profil'}">Profil</a></li>
+                    <li><a th:href="${'/pregled_rezervacija'}">Rezervacije</a></li>
+                    <li><a th:href="${'/odjava'}">Odjava</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     
 
-    <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
+    <h1><br>Novosadski bioskopi<br><br></h1>
     <p>Da li sam ovde?</p>
     <div id="pocetni_sadrzaj">
     
