--- a/src/main/resources/templates/registracija.html
+++ b/src/main/resources/templates/registracija.html
@@ -1,54 +1,78 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <title>Prikaz svih korisnika</title>
-    <link rel="stylesheet" th:href="@{css/temp_style.css}">
+    <title>Novosadski bioskopi</title>
+    <link rel="stylesheet" th:href="@{/style.css}"/>
     <meta charset="utf-8"/>
 </head>
 <body>
     <nav>
         <div class="container">
             <div class="logo_div">
-                <img src="../static/images/logo_stari.png" alt="">
+                <img th:href="@{'/'}" src="/images/logo_stari.png" alt="">
             </div>
             <div class="navbar">
                 <ul class="menu">
                     <li><a th:href="${'/'}">Početna</a></li>
-                    <li><a th:href="${'/profil'}">Moj profil</a></li>
+                    <li><a th:href="${'/filmovi'}">Filmovi</a></li>
                     <li><a th:href="${'/prijava'}">Prijava</a></li>
                     <li><a th:href="${'/registracija'}">Registracija</a></li>
-                    <li><a th:href="${'/dodaj_bioskop'}">Dodaj bioskop</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     
-<h1><br>Registracija<br><br></h1>
+<h1 id="film"><br>Registracija<br><br></h1>
 
-<section>
+<center>
     <h2>Unesite Vaše podatke:<br><br></h2>
-    <form method="post" action="#" class="forma">
+    <form method="post" th:action="@{/registruj}" th:object="${korisnik}" class="forma">
         <label for="ime">Ime: </label>
-        <input type="text" placeholder="Unesite ime" name="ime" id="ime" required/>
+        <input type="text" placeholder="Unesite ime" id="ime" th:field="*{ime}" required/>
         <br/>
         <label for="prezime">Prezime: </label>
-        <input type="text" placeholder="Unesite prezime" name="prezime" id="ime" required/><br/>
-        <label for="pass">Lozinka: </label>
-        <input type="password" placeholder="Unesite lozinku" name="pass" id="pass" required/><br/>
-        <label for="pass">Korisničko ime: </label>
-        <input type="text" placeholder="Unesite korisničko ime" name="username" id="username" /><br/>
-        <label for="izbor">Izaberite ulogu: </label>
-        <select name="izbor" id="izbor" required="required" >
-            <option value=""> --Vaš izbor-- </option>
-            <option value="1">Gledalac</option>
-            <option value="2">Menadžer</option>
-            <option value="3">Administrator</option>
+        <input type="text" placeholder="Unesite prezime" id="prezime" th:field="*{prezime}" required/><br/><br>
+        <label for="lozinka">Lozinka: </label>
+        <input type="password" placeholder="Unesite lozinku"  id="lozinka" th:field="*{lozinka}" required th:style="${#bools.isTrue(pass_check)} ? 'color: red'"/><br/><br>
+        <label for="korisnicko_ime">Korisničko ime: </label>
+        <input type="text" placeholder="Unesite korisničko ime"  id="korisnicko_ime" th:field="*{korisnicko_ime}" required /><br/><br>
+        <label for="email">Email: </label>
+        <input type="text" placeholder="Unesite email" id="email" th:field="*{email}" />
+        <br/><br>
+        <label for="kontakt_tel">Telefon: </label>
+        <input type="text" placeholder="Unesite broj telefona" id="kontakt_tel" th:field="*{kontakt_tel}"/>
+        <br/><br>
+    
+        <label for="uloga">Izaberite: </label>
+        <select name="uloga" id="uloga">
+            <option th:each="uloga : ${T(com.example.vebprojekat.entity.UlogaEnum.Uloga).values()}" th:value="${uloga}" th:text="${uloga}"></option>
         </select>
+        
         <br/>
-        <input type="submit" value="Pošalji" th:href="${'/registruj'}"/>
+        
+        <input class="btn" type="submit" value="Potvrda">
+        
+        <div th:if="${#bools.isTrue(reg_check)}">
+            <div style="color: red">Došlo je do greške prilikom registracije.<br>Molimo Vas proverite još jednom unete podatke.</div>
+        </div>
+        
+        <div th:if="${#bools.isTrue(un_check)}">
+            <div style="color: red">
+                <br>Korisničko ime je zauzeto.<br><br><br>
+            </div>
+        </div>
+        
+        <div th:if="${#bools.isTrue(email_check)}">
+            <div style="color: red">
+                <br>Postoji nalog sa ovom email adresom.<br><br><br>
+            </div>
+        </div>
+        
     </form>
-</section>
+    
+    
+</center>
 
 
 </body>
