--- a/src/main/resources/templates/admin_bioskopi.html
+++ b/src/main/resources/templates/admin_bioskopi.html
@@ -21,27 +21,27 @@
             </div>
         </div>
     </nav>
-    
+
 
     <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
-    <h2>Korisnici kojima treba odobriti registracije:<br><br><br></h2>
-    
+    <h2>Bioskopi:<br><br><br></h2>
+
     <table id="movies">
         <tr>
-            <th>Uloga</th>
-            <th>Ime</th>
-            <th>Prezime</th>
-            <th>Korisnicko ime</th>
+            <th>Naziv</th>
+            <th>Adresa</th>
+            <th>Broj telefona</th>
+            <th>Email</th>
             <th></th>
         </tr>
-        <tr th:each="korisnik : ${korisnici}">
-            <td th:text="${korisnik.uloga}"></td>
-            <td th:text="${korisnik.ime}"></td>
-            <td th:text="${korisnik.prezime}"></td>
-            <td th:text="${korisnik.korisnicko_ime}"></td>
-            <td><a th:href="@{/odobri_registraciju/{id}(id=${korisnik.id})}">Odobri</a></td>
-        </tr>    
+        <tr th:each="bioskop : ${bioskopi}">
+            <td th:text="${bioskop.naziv}"></td>
+            <td th:text="${bioskop.adresa}"></td>
+            <td th:text="${bioskop.br_telefona}"></td>
+            <td th:text="${bioskop.email}"></td>
+            <td><a th:href="@{/obrisi_bioskop/{id}(id=${bioskop.id})}">Obriši</a></td>
+        </tr>
     </table>
-    
+
 </body>
 </html>
