--- a/src/main/resources/templates/menadzer_index.html
+++ b/src/main/resources/templates/menadzer_index.html
@@ -1,10 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Novosadski bioskopi</title>
+    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <meta charset="utf-8"/>
 </head>
 <body>
+<nav>
+    <div class="container">
+        <div class="logo_div">
+            <img src="/images/logo_stari.png" alt="">
+        </div>
+        <div class="navbar">
+            <ul class="menu">
+                <li><a th:href="${'/menadzer_index'}">Početna</a></li>
+                <li><a th:href="${'/menadzer_biskopi'}">Bioskopi</a></li>
+                <li><a th:href="${'/odjava'}">Odjava</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<h1 id="film"><br>Novosadski bioskopi<br><br></h1>
+<h2>Korisnici kojima treba odobriti registracije:<br><br><br></h2>
+
+<table id="movies">
+    <tr>
+        <td>Uloga</td>
+        <td th:text="${menadzer.uloga}"></td>
+    </tr>
+    <tr>
+        <td>Ime</td>
+        <td th:text="${menadzer.ime}"></td>
+    </tr>
+    <tr>
+        <td>Prezime</td>
+        <td th:text="${menadzer.prezime}"></td>
+    </tr>
+    <tr>
+        <td>Korisnicko ime</td>
+        <td th:text="${menadzer.korisnicko_ime}"></td>
+    </tr>
+</table>
+
 
 </body>
 </html>
