--- a/src/main/resources/templates/admin_dodaj_bioskopu_menadzera.html
+++ b/src/main/resources/templates/admin_dodaj_bioskopu_menadzera.html
@@ -24,7 +24,7 @@
     
 
     <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
-    <h2>Menadžeri:<br><br><br></h2>
+    <h2>Izaberite menadžera kog želite da dodate:<br><br><br></h2>
     
     <table id="movies">
         <tr>
@@ -34,7 +34,6 @@
             <th>Korisnicko ime</th>
             <th>Potvrđena registracija</th>
             <th></th>
-            <th></th>
         </tr>
         <tr th:each="korisnik : ${korisnici}">
             <td th:text="${korisnik.uloga}"></td>
@@ -42,8 +41,7 @@
             <td th:text="${korisnik.prezime}"></td>
             <td th:text="${korisnik.korisnicko_ime}"></td>
             <td th:text="${korisnik.approved} ? 'DA' : 'NE'"></td>
-            <td><a th:href="@{/obrisi_menadzera/{id}(id=${korisnik.id})}">Obriši</a></td>
-            <td><a th:href="@{/admin_menadzer_detalji/{id}(id=${korisnik.id})}">Detalji</a></td>
+            <td><a th:href="@{/admin_dodaj_bioskopu_menadzera/{id}/{id_mng}(id=${bioskop.id}, id_mng=${korisnik.id})}">Dodaj</a></td>
         </tr>    
         
     </table>
