--- a/src/main/resources/templates/admin_menadzer_detalji.html
+++ b/src/main/resources/templates/admin_menadzer_detalji.html
@@ -34,18 +34,32 @@
             <th>Korisnicko ime</th>
             <th>Potvrđena registracija</th>
             <th></th>
-            <th></th>
         </tr>
-        <tr th:each="korisnik : ${korisnici}">
+        <tr>
             <td th:text="${korisnik.uloga}"></td>
             <td th:text="${korisnik.ime}"></td>
             <td th:text="${korisnik.prezime}"></td>
             <td th:text="${korisnik.korisnicko_ime}"></td>
             <td th:text="${korisnik.approved} ? 'DA' : 'NE'"></td>
-            <td><a th:href="@{/obrisi_menadzera/{id}(id=${korisnik.id})}">Obriši</a></td>
-            <td><a th:href="@{/admin_menadzer_detalji/{id}(id=${korisnik.id})}">Detalji</a></td>
+            <!--<td><a th:href="@{/obrisi_menadzera/{id}(id=${korisnik.id})}">Obriši</a></td>-->
         </tr>    
-        
+    </table>
+    <br><br><br>
+    <table id="movies">
+        <tr>
+            <th>Bioskopi za koje je zadužen</th>
+            <th>Adresa</th>
+            <th>Broj telefona</th>
+            <th>E-mail adresa</th>
+            <th></th>
+        </tr>
+        <tr th:each="bioskop : ${bioskopi}">
+            <td th:text="${bioskop.naziv}"></td>
+            <td th:text="${bioskop.adresa}"></td>
+            <td th:text="${bioskop.br_telefona}"></td>
+            <td th:text="${bioskop.email}"></td>
+            <td><a th:href="@{/admin_menadzer_detalji_ukloni_menadzera/{id}/{id_mng}(id=${bioskop.id}, id_mng=${korisnik.id})}">Ukloni menadžera</a></td>
+        </tr>
     </table>
     
     
