--- a/src/main/resources/templates/admin_izmeni_bioskop_unos.html
+++ b/src/main/resources/templates/admin_izmeni_bioskop_unos.html
@@ -23,7 +23,7 @@
     </nav>
     
 
-    <h1 id="film"><br>Dodaj bioskop<br><br></h1>
+    <h1 id="film"><br>Izmeni podatke bioskopa<br><br></h1>
 
 <center>
     <form method="post" th:action="@{/admin_izmeni_bioskop_post}" th:object="${bioskop}" class="forma">
