--- a/src/main/resources/templates/gledalac_index.html
+++ b/src/main/resources/templates/gledalac_index.html
@@ -14,7 +14,7 @@
             <div class="navbar">
                 <ul class="menu">
                     <li><a th:href="${'/'}">Početna</a></li>
-                    <li><a th:href="${'/filmovi'}">Filmovi</a></li>
+                    <li><a th:href="${'/gledalac_filmovi'}">Filmovi</a></li>
                     <li><a th:href="${'/profil'}">Profil</a></li>
                     <li><a th:href="${'/pregled_rezervacija'}">Rezervacije</a></li>
                     <li><a th:href="${'/odjava'}">Odjava</a></li>
@@ -25,7 +25,7 @@
     
 
     <h1><br>Novosadski bioskopi<br><br></h1>
-    <p>Da li sam ovde?</p>
+    <center><h2>Dobrodošli na stranicu novosadskih bioskopa!</h2></center>
     <div id="pocetni_sadrzaj">
     
     </div>
