--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
     
 
     <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
-    <p>Da li sam ovde?</p>
+    <center><h2>Dobrodošli na stranicu novosadskih bioskopa!</h2></center>
     <div id="pocetni_sadrzaj">
     
     </div>
