--- a/src/main/resources/templates/menadzer_index.html
+++ b/src/main/resources/templates/menadzer_index.html
@@ -23,7 +23,7 @@
 
 
 <h1 id="film"><br>Novosadski bioskopi<br><br></h1>
-<h2>Korisnici kojima treba odobriti registracije:<br><br><br></h2>
+<h2>Moj profil<br><br><br></h2>
 <center>
     <div id="menadzer">
     <table class="profil">
