--- a/src/main/resources/templates/pregled_rezervacija.html
+++ b/src/main/resources/templates/pregled_rezervacija.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <ul class="menu">
                 <li><a th:href="${'/'}">Početna</a></li>
-                <li><a th:href="${'/filmovi'}">Filmovi</a></li>
+                <li><a th:href="${'/gledalac_filmovi'}">Filmovi</a></li>
                 <li><a th:href="${'/profil'}">Profil</a></li>
                 <li><a th:href="${'/pregled_rezervacija'}">Pregled rezervacija</a></li>
             </ul>
@@ -22,12 +22,30 @@
     </div>
 </nav>
 
+<center>
+    <h1><br>Pregled rezervacija<br><br></h1>
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>Naziv</th>
+            <th>Cena</th>
+            <th>Vreme</th>
+            <th>Bioskop</th>
+            <th>Otkazi rezervaciju</th>
 
-<h1><br>Novosadski bioskopi<br><br></h1>
-<p>Da li sam ovde?</p>
-<div id="pocetni_sadrzaj">
+        </tr>
 
-</div>
+        <tr th:each="rezervacija : ${rezervacije}">
+            <td th:text="${rezervacija.id}"></td>
+            <td th:text="${rezervacija.film.naziv}"></td>
+            <td th:text="${rezervacija.cena}"></td>
+            <td th:text="${rezervacija.datumvreme}"></td>
+            <td th:text="${rezervacija.bioskop.naziv}"></td>
+            <td><a th:href="${'/otkazi-rezervaciju/' + rezervacija.id}">Otkaži rezervaciju</a></td>
+
+        </tr>
+    </table>
+	</center>
 
 </body>
 </html>
